功能用例页面优化

--- a/src/test/function/components/functionStyle.scss
+++ b/src/test/function/components/functionStyle.scss
@@ -27,3 +27,17 @@
     display: flex;
     align-items: end;
 }
+
+.function-step_add{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    border: 1px dashed #eee;
+    cursor: pointer;
+    margin: -1px 0 0;
+}
+
+.function-step_add:hover{
+    background: var(--pi-bg-color);
+}
