功能用例关联需求关联缺陷

--- a/src/integrated/teamwire/defect/components/workItemStyle.scss
+++ b/src/integrated/teamwire/defect/components/workItemStyle.scss
@@ -2,3 +2,13 @@
 .ant-picker-range{
     width: 100%;
 }
+
+.defect_project_select{
+    padding: 10px 0;
+}
+
+.defect_project_select .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+    background: #f4f4f4;
+    border-radius: 5px;
+    border: none;
+}
