web app 测试页面调整，功能测试缺陷，需求优化

--- a/src/integrated/teamwire/defect/components/workItemStyle.scss
+++ b/src/integrated/teamwire/defect/components/workItemStyle.scss
@@ -4,11 +4,31 @@
 }
 
 .defect_project_select{
-    padding: 10px 0;
+    padding: 10px 5px;
+    box-shadow: 0 0 10px #e4e4e4;
+    margin: 10px
 }
 
 .defect_project_select .ant-select:not(.ant-select-customize-input) .ant-select-selector{
     background: #f4f4f4;
     border-radius: 5px;
     border: none;
+}
+
+.content-box-center{
+    .ant-tabs{
+        height: 100%;
+
+        .ant-tabs-content{
+            height: 100%;
+
+            .ant-tabs-tabpane{
+                height: 100%;
+            }
+        }
+
+
+    }
+
+
 }
