--- a/src/integrated/teamwire/workItem/components/demandStyle.scss
+++ b/src/integrated/teamwire/workItem/components/demandStyle.scss
@@ -31,6 +31,13 @@
     }
 }
 
+.demand_project_select{
+    padding: 10px 5px;
+    box-shadow: 0 0 10px #e4e4e4;
+    margin: 10px;
+    height: 100%
+}
+
 .demand_project_select .ant-select:not(.ant-select-customize-input) .ant-select-selector{
     background: #f4f4f4;
     border-radius: 5px;
