--- a/src/test/testcase/components/testcaseStyle.scss
+++ b/src/test/testcase/components/testcaseStyle.scss
@@ -158,6 +158,42 @@
 .breadcrumb-title_between{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom:1px solid #e4e4e4;
     padding: 5px ;
+}
+
+
+.test-detail-from{
+    display: flex;
+    margin: 20px 0;
+    justify-content: space-between;
+    padding: 0 15px;
+
+    .test-detail-form-item{
+        width: 130px;
+        background: #efefef;
+        padding: 15px;
+        border-radius: 5px;
+    }
+
+    .test-detail-form-label{
+        font-size: 13px;
+    }
+
+    .ant-form-item{
+        margin: 0;
+
+        .ant-input{
+            width: 110px;
+            border:0;
+            background-color: #efefef;
+            padding: 0;
+            font-size: 22px;
+            color: #000;
+        }
+    }
+}
+.content-box-center{
+    height: 100%;
 }
