功能界面优化

--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -331,3 +331,11 @@ table .icon{
     width: 40px;
     height: 40px;
 }
+
+.teston-show{
+    display: block;
+}
+
+.teston-hide{
+    display: none;
+}
