--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -180,7 +180,7 @@ table .icon{
 
 .title-space-between{
     display: flex;
-    margin: 10px 10px 10px 0;
+    margin: 10px  0;
     justify-content: space-between;
     font-weight: bold;
 
