--- a/src/testplan/components/testPlanStyle.scss
+++ b/src/testplan/components/testPlanStyle.scss
@@ -1,4 +1,9 @@
-
+.plan-box{
+    min-width: 860px;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
 .testplan-form-info{
     margin: 10px 10px 20px;
     //border-bottom: 1px solid #e4e4e4;
