--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -318,9 +318,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 5px;
+    padding: 0 10px 5px 3px;
     border-bottom: 1px solid #e4e4e4;
-    padding: 0 0 5px;
 
     .case-breadcrumb{
         font-weight: bold;
@@ -338,10 +337,6 @@
         .case-header_title{
             border: none;
             font-weight: bold;
-
-            &:hover{
-                background: var(--pi-hover-color);
-            }
         }
     }
 }
