--- a/src/common/commonStyle.scss
+++ b/src/common/commonStyle.scss
@@ -193,4 +193,49 @@
     }
 }
 
+.base-info-form{
+    .ant-form-item-label{
+        text-align: left;
+
+
+    }
+    .ant-form-item-label > label{
+        color: rgb(138 138 138 / 85%);
+        font-size: 13px;
+    }
+
+    .ant-input{
+        border: none;
+
+        &:hover{
+            background: #f4f4f4;
+        }
+    }
+
+    .ant-input[disabled]{
+        background: white;
+        cursor: auto;
+        color: #8a8a8a;
+        &:hover{
+            background: white;
+        }
+    }
+
+    .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+        border: none;
+
+        &:hover{
+            background: #f4f4f4;
+        }
+
+        &:hover +.ant-select-arrow{
+            display: block;
+        }
+    }
+
+    .ant-select-arrow{
+        display: none;
+    }
+
+}
 
