--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -320,6 +320,7 @@
     align-items: center;
     padding: 0 10px 5px 3px;
     border-bottom: 1px solid #e4e4e4;
+    height: 35px;
 
     .case-breadcrumb{
         font-weight: bold;
@@ -334,9 +335,18 @@
         display: flex;
         align-items: center;
 
-        .case-header_title{
-            border: none;
-            font-weight: bold;
-        }
+
+    }
+
+
+    .breadcrumb-left{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .case-header_title{
+        border: none;
+        font-weight: bold;
     }
 }
