--- a/src/testplan/components/testPlanStyle.scss
+++ b/src/testplan/components/testPlanStyle.scss
@@ -69,3 +69,10 @@
     align-items: center;
     margin: 0 0 10px ;
 }
+
+.header-bread{
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    height: 35px;
+}
