--- a/src/test/testcase/components/caseContantStyle.scss
+++ b/src/test/testcase/components/caseContantStyle.scss
@@ -51,6 +51,11 @@
     }
 }
 
+.ant-pagination{
+    display: flex;
+    justify-content: center;
+}
+
 .category-nav-header{
     display: flex;
 }
