--- a/src/test/testcase/components/testcaseStyle.scss
+++ b/src/test/testcase/components/testcaseStyle.scss
@@ -239,8 +239,13 @@
     .case-list_right{
         flex: 1;
 
+        .case-step-title{
+            font-weight: bold;
+            margin: 0 0 10px 0 ;
+        }
+
         .case-step_right_box{
-            margin:15px;
+            margin:0 0 20px 0;
 
             .ant-form-item-label > label{
                 font-size: 12px;
@@ -292,7 +297,7 @@
 
 
 .case-tabs-box{
-    height:calc(100% - 28px);
+    height:calc(100% - 35px);
 
     .ant-tabs > .ant-tabs-nav .ant-tabs-nav-wrap, .ant-tabs > div > .ant-tabs-nav .ant-tabs-nav-wrap{
         height: 35px;
