--- a/src/test/testcase/components/caseContantStyle.scss
+++ b/src/test/testcase/components/caseContantStyle.scss
@@ -218,3 +218,123 @@
     }
 
 }
+
+
+
+.perfom-config-item{
+    display: flex;
+    align-items: center;
+    height: 32px;
+    margin: 0 0 20px 0 ;
+
+
+    .ant-btn:active, .ant-btn:focus, .ant-btn:hover{
+        background: #2196f3;
+        color: white;
+        border-color:#2196f3 ;
+    }
+}
+
+.perform-item-detail{
+    margin: 0 30px 0 0;
+
+}
+
+.exeMode{
+    background: #2196f3;
+    color: white;
+}
+
+
+//
+.result-spin-box{
+    height: 100%;
+
+
+}
+
+.ant-spin-nested-loading{
+    height: 100%;
+
+    .ant-spin-container{
+        height: 100%;
+    }
+}
+
+
+.scene-step-detail-box{
+
+    .scene-step-detail-contant{
+        display: flex;
+        margin: 35px;
+
+        .scene-step-detail-item{
+            width: 260px;
+            margin: 30px;
+            border-bottom: 1px solid #dddddd;
+        }
+
+        .scene-step-detail-item-value{
+            font-size: 28px;
+        }
+    }
+}
+
+.scene-step-detail{
+    overflow: auto;
+    flex: 1;
+}
+
+.scene-step-contant{
+    width: 240px;
+    border: 1px solid #e4e4e4;
+}
+
+.perform-client-box{
+    margin: 10px;
+    height: 100px;
+}
+
+.perform-client-item{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #e4e4e4;
+    width: 260px;
+
+    .perform-client-item-status{
+        display: flex;
+        align-items: center;
+
+        .perform-client-item-status-icon{
+            width: 10px;
+            height: 10px;
+            border-radius: 5px;
+            background: #4ccf4c;
+            display: inline-block;
+            margin: 6px;
+        }
+
+    }
+
+    .perform-client-item-check{
+        align-self: flex-start;
+    }
+}
+
+.api-perf-test-header-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.api-perf-instance-detail{
+    display: flex;
+    flex-direction: column;
+
+    &-item{
+
+    }
+}
