--- a/src/test/testcase/components/testcaseStyle.scss
+++ b/src/test/testcase/components/testcaseStyle.scss
@@ -364,3 +364,13 @@
         background: var(--pi-hover-color);
     }
 }
+
+.case-table-case-type{
+    width: 60px;
+    text-align: center;
+    background: #f2f2f2;
+    padding: 3px;
+    font-size: 12px;
+    border-radius: 5px;
+    border: 1px solid #e4e4e4;
+}
