--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -318,7 +318,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #e4e4e4;
+    //border-bottom: 1px solid #e4e4e4;
     height: 40px;
 
     .case-breadcrumb{
