--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -81,7 +81,8 @@
         width: 80px;
         height: 100%;
         position:relative;
-        background: #efefef;
+        background: #f6f6f6;
+        box-shadow: 3px 0 5px -5px rgb(0 0 0 / 30%);
     }
 
     .ws-detail-right{
