--- a/src/home/header/portalStyle.scss
+++ b/src/home/header/portalStyle.scss
@@ -123,7 +123,7 @@
     justify-content: space-between;
     align-items: center;
     height: 48px;
-    border-bottom: 2px solid #e4e4e4;
+    border-bottom: 1px solid #efefef;
 
     .frame-header-logo{
         height: 35px;
@@ -204,12 +204,12 @@
 
             &:hover{
                 color: rgb(0, 82, 204);
-                background-color: rgba(222, 235, 255, 0.9);
             }
         }
     }
 
     .header-right-item:hover{
+        background-color: rgba(222, 235, 255, 0.9);
         border-radius: 50%;
     }
 
