--- a/src/home/homestyle.scss
+++ b/src/home/homestyle.scss
@@ -4,12 +4,12 @@
     overflow: auto;
     /*background-color:#f0f2f5;*/
     height: var(--pi-calc-content);
-    background: var(--pi-bg-grey-100);
+    background: white;
 
     .home-content-box{
         /*width: 800px;*/
         margin: 0 auto;
-        width: 1220px;
+        width: 1080px;
         padding: 10px 10px 0 10px ;
 
         .ant-list-item-meta{
@@ -17,7 +17,7 @@
         }
 
         .home-box-item{
-            border: 1px solid var(--pi-border-color);
+            //border: 1px solid var(--pi-border-color);
             //width: 595px;
             //min-height: 425px;
             margin-bottom: 10px;
@@ -53,7 +53,7 @@
 
         .home-box-item-dynamic{
             border-radius: var(--pi-border-radius);
-            border: 1px solid var(--pi-border-color);
+            //border: 1px solid var(--pi-border-color);
             background: #fff;
             margin: 0 0 10px 0;
             //box-shadow: 0 3px 6px rgb(140 149 159 / 15%);
