--- a/src/setting/system/sysMana.scss
+++ b/src/setting/system/sysMana.scss
@@ -54,7 +54,7 @@
         .orga-aside-li {
             height: 40px;
             line-height: 40px;
-            border-left: 3px solid rgba(255, 255, 255, 0);
+            //border-left: 3px solid rgba(255, 255, 255, 0);
 
         }
 
