--- a/src/assets/iconfont/demo.css
+++ b/src/assets/iconfont/demo.css
@@ -206,7 +206,7 @@
 .markdown hr {
   height: 1px;
   border: 0;
-  background: #e9e9e9;
+  background: var(--pi-bg-grey-100);;
   margin: 16px 0;
   clear: both;
 }
@@ -283,7 +283,7 @@
 }
 
 .markdown>table th {
-  background: #F7F7F7;
+  background: var(--pi-bg-grey-100);;
 }
 
 .markdown blockquote {
@@ -455,7 +455,7 @@ pre[class*="language-"] {
 
 :not(pre)>code[class*="language-"],
 pre[class*="language-"] {
-  background: #f5f2f0;
+  background: var(--pi-bg-grey-100);
 }
 
 /* Inline code */
