--- a/src/home/homestyle.scss
+++ b/src/home/homestyle.scss
@@ -77,7 +77,7 @@
             //border: 1px solid var(--pi-border-color);
             border-radius: var(--pi-border-radius) ;
             margin: 0 20px 10px 0;
-            background: #f5f5f5;
+            background: var(--pi-bg-grey-100);
             padding: 10px;
             cursor: pointer;
             border-bottom: 2px solid #ffffff00;
@@ -213,7 +213,7 @@
         }
 
         .home-detail-list-li:hover{
-            background: #f5f5f5;
+            background: var(--pi-bg-grey-100);
             cursor: pointer;
         }
 
