--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -15,7 +15,7 @@
 .tc-row{
     overflow:auto;
     height: 100%;
-    background-color: #f5f5f5;
+    background-color: var(--pi-bg-grey-100);
 }
 
 .tc-col{
@@ -24,7 +24,7 @@
 }
 
 .tc-side{
-    background-color: #fafafa;
+    background-color: var(--pi-bg-grey-100);
     box-shadow: inset -1px 0 0 #e5e5e5;
 }
 
@@ -81,7 +81,7 @@
         width: 80px;
         height: 100%;
         position:relative;
-        background: #f6f6f6;
+        background: var(--pi-bg-grey-100);
         box-shadow: 3px 0 5px -5px rgb(0 0 0 / 30%);
     }
 
@@ -279,18 +279,20 @@
         font-weight: 600;
     }
 
+    .wd-total-box{
+        display: flex;
+        justify-content: space-between;
+        padding: 20px;
+        background: #fff;
+        margin: 0 10px;
+    }
     .wd-total{
         background: #fff;
         padding: 0 10px 20px;
+        border: 1px solid var(--pi-border-color);
+        border-radius: var(--pi-border-radius);
 
-        .wd-total-box{
-            display: flex;
-            justify-content: space-between;
-            padding: 20px;
-            border-radius: var(--pi-border-radius);
-            background: #fff;
-            margin: 0 10px;
-        }
+
 
         &-item{
             width: 100px;
@@ -311,6 +313,8 @@
         padding: 0 10px 20px;
         margin: 10px 0 0;
         background: #fff;
+        border: 1px solid var(--pi-border-color);
+        border-radius: var(--pi-border-radius);
     }
 
 }
