--- a/src/repository/repository/components/repository.scss
+++ b/src/repository/repository/components/repository.scss
@@ -21,7 +21,7 @@ ul{
     .left-tree-content{
         height: 100%;
         width: 100%;
-        background: #fafafa;
+        background: var(--pi-bg-grey-100);
         border-right: 1px solid var(--pi-border-color);
     }
 
@@ -236,7 +236,7 @@ ul{
 
     .ant-modal-body{
         height: 100%;
-        background: #fafafa;
+        background: var(--pi-bg-grey-100);
 
         .ant-row{
             height: 100%;
