--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -339,3 +339,12 @@ table .icon{
 .teston-hide{
     display: none;
 }
+
+
+.link-text{
+
+    &:hover{
+        color: var(--tiklab-blue);
+        cursor: pointer;
+    }
+}
