--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -313,7 +313,7 @@
         padding: 0 10px 20px;
         margin: 10px 0 0;
         background: #fff;
-        border: 1px solid var(--pi-border-color);
+        //border: 1px solid var(--pi-border-color);
         border-radius: var(--pi-border-radius);
     }
 
